# arcs-experiments

./: .gitignore  README.md
.github/workflows/: skunk.yml
skunk/cpp/: Makefile  graph.cpp  graph.h  hello_world.cpp  parser.cpp  parser.h  skunk.cpp  skunk_ast.cpp  skunk_ast.h  test.c  test.skunk  test_parser.cpp
skunk/haskell/: AST.hs  Graph.hs  GraphBuilder.hs  GraphToModule.hs  IRGen.hs  IRHelpers.hs  Parser.hs  TestParser.hs  skunk.hs  test.c  tests.hs
skunk/rust/skunk/: Cargo.toml  USAGE  test.skunk
skunk/rust/skunk/examples/parser/: Char.skunk  Pair.skunk  Spaces.skunk  UnsignedInt.skunk  definitions.skunk
skunk/rust/skunk/src/: ast.rs  graph.rs  graph_builder.rs  graph_to_module.rs  ir_gen.rs  main.rs  parser.rs
skunk/rust/skunk/src/ir_gen/: codegen.rs  codegen_state.rs  mod.rs  state_values.rs
skunk/rust/skunk/src/ir_gen/codegen/: c_functions.rs  codegen_string_tests.rs  debug_codegen.rs  examples_codegen.rs  expression_codegen.rs  mod.rs
skunk/rust/skunk/src/parser/tests/: expression_builder.rs
