[package]
name = "skunk"
version = "0.1.0"
authors = ["shanestephens"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.0.0"
nom-supreme = "0.6.0"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm11-0"] }
paste = "1.0"

[profile.dev]
opt-level = 0
debug = true